--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -290,7 +290,7 @@
  pirates.16.b:0 "乗組員に楽をさせてあげよう。"
  pirates.17.t:0 "密輸業者の奮闘"
  pirates.17.d:0 "最善の時でさえ、密輸品を外国の港に持ち込むことは困難だ。今は確実に最善の時ではない。多くの密輸業者は商品を没収され[Root.Capital.GetCapitalName]に戻ってくる。中には絞首台に送られ戻らない人もいる。"
- pirates.17.a:0 "不幸だ。"
+ pirates.17.a:0 "不幸だな。"
  pirates.18.t:0 "操舵手の選挙"
  pirates.18.d:0 "[Root.GetFlagshipName]の操舵手が板歩きの刑にあったことで、その役割を果してくれる新しい候補者が必要となった。操舵手は海賊船において特殊な地位にある。乗組員によって選ばれた彼は、時には船長の一方的な権威に対して乗組員の代表として彼らの要望のために意見することを期待される。\n\nすぐに2人の候補者が現れた。[Root.crew_representative.GetName]は乗組員の真の代弁者であり、乗組員の懸念に耳を傾ける謙虚さと船長に立ち向かう不屈の精神を持っている。一方で、[Root.captains_puppet.GetName]は常に船長の力となり、船長の希望を乗組員の希望と思わせることに長けている。どちらが海賊たちの心と支持を勝ち取るのだろうか？"
  pirates.18.a:0 "[Root.crew_representative.GetName]よ、乗組員の声となるのだ。"
