--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -767,7 +767,7 @@
  ming_crisis.4.c:0 "[CDL.GetName] must be very nice around that time..."
  ming_crisis.5.c:0 "[YUE.GetName] is a great realm to be in..."
  ming_crisis.5.e:0 "I think I start a new life in [WUU.GetName]..."
- flavor_kor.13.t:0 "[Root.GetName] and the Rise of the Manchu"
+ flavor_kor.13.t:0 "[Root.GetName]と満州の台頭"
  flavor_kor.13.d:1 "We and the Jurchen have a history of warfare in the past, and only thanks to our natural borders, the Jangbaek Mountains, was it possible to keep Korea safe from the raids of the horde. With the unification of the Jurchen the question of our safety has risen up yet again though. While we were able to hold off the raids on our borders, it is much more unlikely that we can protect ourselves from the force of an united Manchuria. It might be worth considering to pledge our allegiance to [MCH.GetName], and pay tribute to them in return for peace and prosperity in [Root.GetName]."
  flavor_kor.13.a:0 "Why should we? The Celestial Emperor will protect us."
  flavor_kor.13.b:0 "We shall pay our tribute to the Manchu."
