--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -206,7 +206,7 @@
  CHANGE_ESTATE_REGENCY_TO_RULER_EFFECT_DESC:0 "$COUNTRY|Y$は摂政を$VALUE$年延長します。\n"
  ESTATE_REGENCY_FOR:0 "$HEIR$（§Y$AGE$§W歳）のための$ESTATE$摂政"
  ESTATE_INTERREGNUM:0 "$ESTATE$の空位"
- ADD_GREAT_PROJECT_TIER:0 "$TIERCHANGE$による$TYPE$$NAME|Y$の開発を変更します。"
+ ADD_GREAT_PROJECT_TIER:0 "$TYPE$$NAME|Y$のレベルを$TIERCHANGE$変更します。"
  MODIFIER_GREAT_PROJECT_UPGRADE_COST:0 "大事業のアップグレードコスト"
  MODIFIER_LOCAL_GREAT_PROJECT_UPGRADE_COST:0 "地方の大事業のアップグレードコスト"
  LEDGER_GREAT_PROJECTS:0 "大事業"
