Save/Update files [ci skip]

--- a/source/localisation/hints_l_english.yml
+++ b/source/localisation/hints_l_english.yml
@@ -152,8 +152,8 @@
  HINT_EXPLORATION_TITLE:0 "探検"
  HINT_EXPLORATION_TEXT:0 "未踏の土地が未知領域によって隠されています。あなたは未知領域に移動するたびに探検家又は征服者が必要となります。探検家が艦隊を率い、征服者が軍隊を率います。"
  HINT_TERRAINCOGNITA_TITLE:0 "未知領域"
- HINT_TERRAINCOGNITA_TEXT:1 "未知領域は、まだ探索していない世界の一部です。あなたのユニットは探検家や征服者に率いられているか、あるいは土地があなたと戦争中の誰かによって所有されていない限り、そこにユニットを移動させることは不可能です。"
- HINT_TERRAINCOGNITA_ED_TEXT:0 "未知領域はあなたがまだ探求していない世界の一部です。探検家や征服者が率いるユニットにここで探検する任務を与えなければなりません。任務が実行されるまでここにユニットを移動させることは不可能です。"
+ HINT_TERRAINCOGNITA_TEXT:1 "未知領域はあなたがまだ探求していない世界の一部です。あなたのユニットは探検家や征服者に率いられているか、あるいは土地があなたと戦争中の誰かによって所有されていない限り、そこにユニットを移動させることは不可能です。"
+ HINT_TERRAINCOGNITA_ED_TEXT:0 "未知領域はあなたがまだ探求していない世界の一部です。探検家や征服者が率いるユニットにここで探検する任務を与えなければならず、任務が実行されるまでここにユニットを移動させることは不可能です。"
  HINT_TERRAINCOGNITA_QFTNW_WARN:0 "§R- 大洋を越えて探検するには$IDEANAME$のアイデアが必要です。§!"
  HINT_TERRAINCOGNITA_NEED_EXPLORER:0 "§R- 艦隊が未知領域を明らかにするためには、探検家が率いなければなりません。§!"
  HINT_TERRAINCOGNITA_OUT_OF_RANGE:0 "§R- 現在の植民範囲ではここを探索することができません。§!"
