--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1484,7 +1484,7 @@
  REBELS_ABANDON_CAUSE_BTN1:0 "OK"
  REBELS_ABANDON_CAUSE_BTN2:0 "OK"
  REBELS_ABANDON_CAUSE_BTN3:0 "移動"
- NO_DEVASTATION_SOME_PROSPERITY_MAP_TT:0 "$NAME|Y$ is not devastated, and is $VAL|0&$ towards prosperity."
+ NO_DEVASTATION_SOME_PROSPERITY_MAP_TT:0 "$NAME|Y$は荒廃しておらず、繁栄に向かって$VAL|0&$ほど進行しています。"
  DIPIRO_GUARANTEED_BY_DATE:0 "$NAME|Y$によって独立を$DATE|Y$まで保障されています。"
  DIPIRO_GUARANTEE_DATE:0 "$NAME|Y$の独立を$DATE|Y$まで保障しています。"
  fallback_wargoal:0 "優位性を示す"
@@ -1517,12 +1517,12 @@
  push_back_colonizers_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
  CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE:0 "$SUBJECTTYPES$からは大事業は移動できません。"
  TRADE_COMPANY_AUTONOMY_MODIFIERS:0 "It will also have the following effects, modified by Local Autonomy (currently $AUTONOMY|%1R$):"
- OVERLORD_NAVAL_FORCE_LIMIT_MODIFIER:0 "Overlord Naval Force Limit Modifier"
- mechanic_can_change_primary_culture_no:0 "Forbids changing the Primary Culture."
- HRE_VOTE_INELIGIBLE_RELIGIOUS:0 "$COUNTRY$ has a Religious Government."
- CANNOT_EXPLORE_WASTELAND:0 "Terra Incognita is part of the world that you have not explored yet. This particular bit of wasteland is too dangerous to explore."
- AI_ACCEPT_HUMAN:0 "This is a Human player and will decide for themselves."
- MODIFIER_NO_STABILITY_LOSS_ON_MONARCH_DEATH:0 "No Stability loss on Monarch death"
+ OVERLORD_NAVAL_FORCE_LIMIT_MODIFIER:0 "宗主国の海軍扶養限界補正"
+ mechanic_can_change_primary_culture_no:0 "主要文化の変更ができない"
+ HRE_VOTE_INELIGIBLE_RELIGIOUS:0 "$COUNTRY$は宗教的政体です。"
+ CANNOT_EXPLORE_WASTELAND:0 "未知領域はあなたがまだ探求していない世界の一部です。この荒れ地は特に危険すぎるため、探索することはできません。"
+ AI_ACCEPT_HUMAN:0 "プレイヤーであるため、彼自身の意思で決定するでしょう。"
+ MODIFIER_NO_STABILITY_LOSS_ON_MONARCH_DEATH:0 "君主が死亡しても安定度が低下しない"
  scottish_india_trade_co:0 "スコットランド東インド会社"
  desc_scottish_india_trade_co:0 "スコットランド東インド会社は、アフリカとインドのすべてのスコットランドの財産を監督し、そこで交易するあらゆる権利を支配している。"
  WECONVERT_SECONDARY_REMOVED_TITLE:0 "Changed Secondary Religion"
@@ -1540,12 +1540,12 @@
  IN_ENEMY_TERRITORY:0 "The unit is in enemy territory."
  CONDOTTIERI_ALREADY_HAS_LEADER:0 "The Condottieri unit already has a leader."
  NO_TARGETS_TO_ATTACH_TO:0 "There are no valid units to attach to."
- UPGRADE_SHIPS_DESC:0 "Upgrade your ships to the latest designs.\nUpgraded ships will be reduced to 1% strength and their sailors returned to your sailor pool."
- TOOLTIP_TOGGLE_GO_HOME_WAR_NAME:0 "§YGo to port during war§!"
+ UPGRADE_SHIPS_DESC:0 "艦船を最新の設計にアップグレードします。\nアップグレードされた艦船は戦力が1%まで減少し、水兵はプールへ戻ります。 "
+ TOOLTIP_TOGGLE_GO_HOME_WAR_NAME:0 "§Y戦争中は寄港する§!"
  CANNOT_CONSOLIDATE_FULL_STRENGTH:0 "All armies are at full strength."
  REORGANIZE_WRONG_NUMBER_OF_UNITS:0 "You need to select two armies."
  DIPLO_ENEMY_ALLIES:0 "$WHO$ is allied to $COUNTRY_ADJ$ enemy $ENEMY$: "
- EMPEROR_INELIGIBLE_NO_HEIR:0 "$COUNTRY$ do not have an Heir."
+ EMPEROR_INELIGIBLE_NO_HEIR:0 "$COUNTRY$には後継者がいません。"
  SECEDE_SUBJ_TRIBAL_LAND:0 "$WHO$ will cede $WHAT$ Tribal Land to $TO$, changing Liberty Desire by $LD|-$."
  SECEDE_TRIBAL_LAND:0 "$WHO$ will cede $WHAT$ Tribal Land to $TO$."
  DIPLO_LOAN_TOTAL_INTEREST_TOO_MUCH:0 "Total interest of $INTEREST|Y$¤ exceeds $PERCENT|Y%$ of the loan amount: "
@@ -1591,24 +1591,24 @@
  CONVERT_TRIBUTARY_TO_VASSAL_DESC2:0 "Spend $MANDATE|Y$ Mandate ($PERCENT|%$ of their development) to convert $COUNTRY|Y$ from a Tributary State to a Vassal."
  CONVERT_TRIBUTARY_TO_VASSAL_DESC:0 "We will spend $MANDATE|Y$ Mandate ($PERCENT|%$ of their development) to convert $COUNTRY|Y$ from a Tributary State to a Vassal."
  leader_death_reason_lost_at_sea:0 "[GetSheHeCap] died at sea after his transport ship sank."
- MODIFIER_FREE_LAND_LEADER_POOL:0 "Land Leader(s) without Upkeep"
- MODIFIER_FREE_NAVY_LEADER_POOL:0 "Navy Leader(s) without Upkeep"
+ MODIFIER_FREE_LAND_LEADER_POOL:0 "陸軍指揮官枠"
+ MODIFIER_FREE_NAVY_LEADER_POOL:0 "海軍指揮官枠"
  land_forcelimit:0 "陸軍扶養限界"
  naval_forcelimit:0 "海軍扶養限界"
  GREAT_PROJECT_CHARTER_COST:0 "$GREATPROJECT|Y$: "
  CS_REVOLUTION_CENTRE:1 "You cannot add Centers of Revolution to your Subjects."
  ALLOW_ATTACH_CANNOT_EXILED:0 "Exiled Units cannot attach other armies."
- great_project_can_be_upgraded_instant:0 "Great Project(s) can be upgraded"
- great_project_can_be_upgraded_delayed:0 "The following Great Project(s) can be upgraded:\n$LIST$"
- PEACE_OPTION_REQUIRES_OTHER_PEACE_OPTION:0 "Cannot demand this without also demanding $TREATYTYPE$."
+ great_project_can_be_upgraded_instant:0 "大事業がアップグレード可能"
+ great_project_can_be_upgraded_delayed:0 "以下の大事業がアップグレード可能：\n$LIST$"
+ PEACE_OPTION_REQUIRES_OTHER_PEACE_OPTION:0 "$TREATYTYPE$の要求をせずにこの要求を行うことはできません。"
  COMMA:0 ", "
  AND_LIST:0 ", and "
  OR_LIST:0 ", or "
- MODIFIER_RELATION_WITH_SAME_CULTURE:0 "Opinion of same Culture"
- MODIFIER_RELATION_WITH_SAME_CULTURE_GROUP:0 "Opinion of same Culture Group"
- MODIFIER_RELATION_WITH_ACCEPED_CULTURE:0 "Opinion of Accepted Culture"
- MODIFIER_RELATION_WITH_OTHER_CULTURE:0 "Opinion of Non-Accepted Culture"
- CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_TRIBUTARY:0 "$COUNTRY$ are not your Tributary State."
+ MODIFIER_RELATION_WITH_SAME_CULTURE:0 "同文化の評価"
+ MODIFIER_RELATION_WITH_SAME_CULTURE_GROUP:0 "同じ文化グループの評価"
+ MODIFIER_RELATION_WITH_ACCEPED_CULTURE:0 "受容文化の評価"
+ MODIFIER_RELATION_WITH_OTHER_CULTURE:0 "非受容文化の評価"
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_TRIBUTARY:0 "$COUNTRY$は我が国の朝貢国ではありません。"
  CENTRALIZE_STATE_NOPOWER:0 "ステートを集権化するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
  EXPAND_INFRASTRUCTURE_NOPOWER:0 "インフラを拡張するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
  EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "州のインフラを$POWER_COST|Y$£admで拡張します。"
