--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -517,18 +517,18 @@
  SIEGE_MERGE_UNITS_DEFENDER:0 "攻撃側ではないため、どのユニットも合流させることはできません。"
  SIEGE_PHASE_DESC:0 "$DAYS|Y$日後に次の包囲フェイズとなります。各包囲フェイズは$PHASEDAYS|Y$日です。"
  SIEGE_ATTACKER_NO_COMMANDER:0 "攻撃側には包囲司令官はいません。"
- SIEGE_BONUS_LEADER:0 "§Y指揮官の包囲能力§!からのフェイズ進行効率"
- SIEGE_BONUS_ARTILLERY:0 "§Y包囲中の砲兵§!からのからのフェイズ進行効率"
- SIEGE_BONUS_FORT:0 "§Y要塞レベル§!からのフェイズ進行効率"
- SIEGE_BONUS_BREACH:0 "§Y城壁の裂け目§!からのフェイズ進行効率"
- SIEGE_BONUS_NOBLOCKADE:0 "州が§Y封鎖されていない§!ことによるフェイズ進行効率"
- SIEGE_BONUS_BLOCKADED:0 "州が§Y封鎖されている§!ことによるフェイズ進行効率"
- SIEGE_PROGRESS_DESC:0 "現在の§Y包囲状態§!からのフェイズ進行効率。値は$MIN|Y0$から$MEMORY|Y0$になる。"
+ SIEGE_BONUS_LEADER:0 "§Y指揮官の包囲能力§!からのフェイズ進行補正。"
+ SIEGE_BONUS_ARTILLERY:0 "§Y包囲中の砲兵§!からのからのフェイズ進行補正。"
+ SIEGE_BONUS_FORT:0 "§Y要塞レベル§!からのフェイズ進行補正。"
+ SIEGE_BONUS_BREACH:0 "§Y城壁の裂け目§!からのフェイズ進行補正。"
+ SIEGE_BONUS_NOBLOCKADE:0 "州が§Y封鎖されていない§!ことによるフェイズ進行補正。"
+ SIEGE_BONUS_BLOCKADED:0 "州が§Y封鎖されている§!ことによるフェイズ進行補正。"
+ SIEGE_PROGRESS_DESC:0 "現在の§Y包囲状態§!からのフェイズ進行補正。値は$MIN|Y0$から$MEMORY|Y0$になる。"
  PORT_BLOCKADE:0 "$WHO$（開発：$TAX|0$）封鎖：$VAL|0$"
  PORT_BLOCKADE_DESC:0 "封鎖は、あなたの艦隊の総船速と州の開発を比較することによって計算されます。"
  PORT_BLOCKADE_CAPACITY:0 "この艦隊は、総開発$VAL|Y0$の州に隣接する港を完全に封鎖することができる。"
  NUM_OF_SHIPS:0 "船の総数"
- SIEGE_BONUS_DICE:0 "最後の§Yダイスロール§!からのフェイズ進行効率。"
+ SIEGE_BONUS_DICE:0 "最後の§Yダイスロール§!からのフェイズ進行補正。"
  CLOSE_UNIT_VIEW:0 "§Y閉じる§!"
  DESELECT_ALL:0 "§Yすべて閉じる§!"
  DESELECT_ALL_DESC:0 "選択されているすべてのユニットの選択を解除します。"
@@ -583,10 +583,10 @@
  TRADEGOODS_LEADER_BONUS:0 "生産の先導者ボーナス："
  MUSIC_CUR_PLAYING:0 "現在再生中の音楽：'$MUSIC|Y$'"
  MUSIC_NO_CUR_PLAYING:0 "音楽停止中"
- TARIFF_BASE_MODIFIER:0 "関税基本効率：$VAL|%1+$"
+ TARIFF_BASE_MODIFIER:0 "関税基本補正：$VAL|%1+$"
  PROV_TRADEPOWER_DESCR:0 "交易力は、交易ノード内の州から、州の支配者がどのくらいの力を受け取れるかに影響を与える。"
  PROV_TRADEVALUE_DESCR:1 "これは生産物の数と価値を乗じて算出されます。交易価値は州の生産収入を増加させます。"
- PROV_GOODSPROD_DESCR:0 "生産量は、より多くの交易品を提供することにより州の交易価値を増加させます。"
+ PROV_GOODSPROD_DESCR:0 "交易品生産は、より多くの交易品を提供することにより州の交易価値を増加させます。"
  HRE_VOTE_ELECTOR_YOU:0 "あなた"
  HRE_CAST_VOTE_DESC:0 "どの国の指導者を皇帝に推すか選択してください！"
  SUPPORT_EFFICIENCY:0 "支援効率"
