--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1847,7 +1847,7 @@
  emp_ger_hlr_burn_the_wooden_wall_title:0 "木の城壁を燃やせ"
  emp_ger_hlr_burn_the_wooden_wall_desc:0 "ブリテン諸島のロイヤル・ネイビーの存在によって、イギリス人は世界中で、そして最も重要なドイツにおいても、力を誇示できる。やつらの干渉に終止符を打ち、やつらの木の城壁を灰塵に帰し、海の底に眠らせてやれ！"
  burn_wooden_wall_tt:0 "§Y5§!隻以上の大型船を持つ§Yイギリス諸島§!に首都がある国家がない。"
- ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、ゲーム終了まで§Yラインラントの工業化§!を獲得し、以下の効果を得ます：\n州生産力補正 §G+15.0%§!"
+ ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、ゲーム終了まで§Yラインラントの工業化§!を獲得し、以下の効果を得ます：\n州交易品生産補正 §G+15.0%§!"
  dominant_economy_tt:0 "他のどのヨーロッパの国家よりも毎月の収入が多い"
  germany_ned_tt:0 "§Yオランダ§!が§Y低地諸国§!地域内の州を領有していない"
  ger_chancellor_tt:0 "スキル§Y3§!以上の顧問を§Y3§!人雇用する。"
