--- a/source/localisation/ledger_l_english.yml
+++ b/source/localisation/ledger_l_english.yml
@@ -209,6 +209,6 @@
  LEDGER_GOVERNMENT_NAME:0 "政府名称"
  LEDGER_GOVERNMENT_LEGITIMACY:0 "正統性"
  LEDGER_GOVERNMENT_ABSOLUTISM:0 "絶対主義"
- LEDGER_GOVERNMENT_MAX_ABSOLUTISM:0 "最大の絶対主義"
+ LEDGER_GOVERNMENT_MAX_ABSOLUTISM:0 "最大絶対主義"
  LEDGER_GOVERNMENT_CORRUPTION:0 "汚職"
  LEDGER_INSTITUTIONS_PENALTY:0 "制度ペナルティ"
