--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -528,8 +528,8 @@
  supporting_independence_of_vassal:0 "我々の従属国の独立を支援している"
  break_supporting_independence:0 "独立支援の盟約を破棄"
  rejected_support_independence:0 "独立支援の提案は拒否された"
- desc_bonus_from_merchant_republics:0 "交易ノードで交易を行っている商業共和国または交易会社は、交易力の占有率に比例して生産される商品にボーナスが与えられます。"
- desc_bonus_from_merchant_republics_for_trade_league_member:0 "交易ノードで交易を行っている商業共和国または交易会社は、交易力の占有率に比例して生産される商品にボーナスが与えられます。貿易同盟の加盟国であれば、さらにこのボーナスが増えます。"
+ desc_bonus_from_merchant_republics:0 "交易ノードで交易を行っている商業共和国または交易会社は、交易力の占有率に比例して交易品生産にボーナスが与えられます。"
+ desc_bonus_from_merchant_republics_for_trade_league_member:0 "交易ノードで交易を行っている商業共和国または交易会社は、交易力の占有率に比例して交易品生産にボーナスが与えられます。貿易同盟の加盟国であれば、さらにこのボーナスが増えます。"
  cerro_rico_modifier:0 "セロ・リコ"
  desc_cerro_rico_modifier:0 "「豊かな山」あるいはポトシの偉大な銀山は、世界で最も豊かな銀鉱山の一つである。1575年から1600年の間に、この鉱山だけでアメリカ大陸で採掘された銀の半分を占めていた。"
  diamond_mines_of_golconda_modifier:0 "ゴールコンダのダイヤモンド"
