--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  military_missions:0 "軍事ミッション"
- build_army_mission_title:0 "扶養限界の確立"
+ build_army_mission_title:0 "扶養限界まで軍拡"
  build_army_mission_desc:0 "発展を続ける国家には、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、海外における政治的利益をさらに高め、国内経済を刺激することができる。"
  expand_country_mission_title:0 "[Root.GetName]の拡大"
  expand_country_mission_desc:0 "我々は、我々の祖先たちによって強く成功が可能な国家を与えられた。我々の遺産を拡大し、[Root.GetName]を成長させて、我々がより強く、より影響力のある国家を子供たちに残す時が来た。"
@@ -1705,7 +1705,7 @@
  gc_por_japanese_trade_desc:0 "すべての見知らぬ人が不審に思えるが、日本の封建的支配者は、どんな商人にも交易の権利や日本の港への上陸さえも中々許してくれない。彼らの疑念を克服する方法を見つけ、この独占的な市場の足場を持つ唯一のヨーロッパ勢力とならなければならない。"
  gc_por_triangle_trade_title:0 "三角貿易"
  gc_por_triangle_trade_desc:0 "アフリカの奴隷は、新世界の大農園で働くために送られる。この奴隷労働の製品は、その後ヨーロッパに送り返され、法外な利益率で売却される。これが大西洋の三角貿易であり、我々はこれを支配しなければならない。"
- por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、§Y20§!年間「§Y三角貿易§!」を獲得し、以下の効果を得ます：\n交易品生産量：§G+10%§!"
+ por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、§Y20§!年間「§Y三角貿易§!」を獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
  por_indian_investment_tooltip:1 " §Yインド§!亜大陸で領有するステートに、交易会社投資が1以上ある"
  gc_portugal_discovers_india_title:0 "インドへ前進"
  gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を手にしてムーア人に打撃を与えることができる。我々は、我々がキリスト教世界を守るために少しでも何かできるように、インドを発見する必要がある。"
@@ -1939,7 +1939,7 @@
  native_unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  native_colonize_title:0 "先住民地域の植民地化"
  native_colonize_desc:0 "自国周辺に人も少なくインフラも乏しい地が非常に多くあり、その地を自国のものとしないのはもったいない。その地へ人を送り、開発を行うのだ。"
- native_build_army_mission_title:0 "扶養限界の確立"
+ native_build_army_mission_title:0 "扶養限界まで軍拡"
  native_build_army_mission_desc:0 "発展を続ける国家には、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、海外における政治的利益をさらに高め、国内経済を刺激することができる。"
  native_assemble_an_army_title:0 "軍の構築"
  native_assemble_an_army_desc:0 "我が国の領土的野心の為には強大な軍隊が必要だ。支配する領土を拡大し、守護するに足りる強力な常設軍を構築し、維持しなければならない。"
@@ -1971,7 +1971,7 @@
  oceania_unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  oceania_colonize_title:0 "オセアニアの植民地化"
  oceania_colonize_desc:0 "自国周辺に人も少なくインフラも乏しい地が非常に多くあり、その地を自国のものとしないのはもったいない。その地へ人を送り、開発を行うのだ。"
- oceania_build_army_mission_title:0 "扶養限界の確立"
+ oceania_build_army_mission_title:0 "扶養限界まで軍拡"
  oceania_build_army_mission_desc:0 "発展を続ける国家には、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、海外における政治的利益をさらに高め、国内経済を刺激することができる。"
  oceania_assemble_an_army_title:0 "軍の構築"
  oceania_assemble_an_army_desc:0 "我が国の領土的野心の為には強大な軍隊が必要だ。支配する領土を拡大し、守護するに足りる強力な常設軍を構築し、維持しなければならない。"
