--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -196,7 +196,7 @@
  MACRO_DRAFT_NAVY_TEMPLATE:0 "召集ユニット"
  MACRO_DRAFT_SAVING_TOOLTIP:0 "このテンプレートは次のように実質的に節約可能です："
  MACRO_DRAFT_COST_TOOLTIP:0 "価格は$COSTDRAFTED|Y$¤で、通常の建造費用$COSTNORMAL|Y$¤より$SAVINGPERCENTAGE$%の節約になります。"
- MACRO_DRAFT_MANPOWER_TOOLTIP:0 "$MANPOWERDRAFTED|Y$人分の水兵を使用し、通常の$MANPOWERNORMAL|Y$人分の水兵に比べて$SAVINGPERCENTAGE$％のコストが削減できます。"
+ MACRO_DRAFT_MANPOWER_TOOLTIP:0 "$MANPOWERDRAFTED|Y$人分の水兵を使用し、通常の$MANPOWERNORMAL|Y$人分の水兵に比べて$SAVINGPERCENTAGE$%のコストが削減できます。"
  MODIFIER_MONTHLY_HEIR_CLAIM_INCREASE:0 "毎月の後継者の請求権増加"
  MODIFIER_MONTHLY_HEIR_CLAIM_INCREASE_MODIFIER:0 "毎月の後継者の請求権増加補正"
  EXTEND_REGENCY_EFFECT_DESC:0 "$COUNTRY|Y$は摂政を$VALUE$年延長します。\n"
@@ -243,10 +243,10 @@
  self_governing_colony_subject:0 "自治植民地従属国"
  self_governing_colony_is_our:0 "§Y$NAME$§!は自治植民地です。"
  COLONY_OVERLORD_EFFECTS_TOOLTIP:0 "これは宗主国に以下の影響を及ぼします：\n"
- COLONY_LAND_FORCE_LIMIT_BONUS:0 "植民地の陸軍扶養限界ボーナス：$BONUS|G$§G％§W"
- COLONY_NAVAL_FORCE_LIMIT_BONUS:0 "植民地の海軍扶養限界ボーナス：$BONUS|G$§G％§W"
- COLONY_MANPOWER_BONUS:0 "植民地の人的資源ボーナス：$BONUS|G$§G％§W"
- COLONY_SAILORS_BONUS:0 "植民地の水兵ボーナス：$BONUS|G$§G％§W"
+ COLONY_LAND_FORCE_LIMIT_BONUS:0 "植民地の陸軍扶養限界ボーナス：$BONUS|G$§G%§W"
+ COLONY_NAVAL_FORCE_LIMIT_BONUS:0 "植民地の海軍扶養限界ボーナス：$BONUS|G$§G%§W"
+ COLONY_MANPOWER_BONUS:0 "植民地の人的資源ボーナス：$BONUS|G$§G%§W"
+ COLONY_SAILORS_BONUS:0 "植民地の水兵ボーナス：$BONUS|G$§G%§W"
  COLONY_SUBJECT_EFFECTS_TOOLTIP:0 "また植民地には以下の影響があります："
  CHANGE_COLONIAL_TYPE:0 "植民地タイプの変更"
  CHANGE_COLONIAL_TYPE_EFFECT:0 "$SUBJECT$は$SUBJECTTYPE$となる。"
