--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -202,7 +202,7 @@
  MERCENARY_CANT_BUILD_OVERSEAS:0 "§R海外の州で傭兵を雇うことはできません§!"
  MERCENARIES_BUILD_TIME_REDUCTION:0 "傭兵の募集期間は$NUM|Y%1$減少しました。"
  BUILD_COST_MILTACTICS:0 "軍事戦術の値が、募集コストを$NUM|Y$増加させる。"
- BUILD_COST_NAVAL_OVERFORCELIMIT:0 "扶養限界の超過はコストを$NUM|Y$増加する。"
+ BUILD_COST_NAVAL_OVERFORCELIMIT:0 "扶養限界の超過は費用を$NUM|Y$増加する。"
  NAVY_COMBAT_TOOLTIP:0 "$NAME|Y$は§Y「$TYPE$」§!です。\n士気は最大値の§Y$MORALE|1$%§!、戦力は$STRENGTH|Y$です。"
  NAVY_COMBAT_TOOLTIP_LASTENGAGED:0 "最後に交戦した敵船は$ENEMY|R$でした。"
  NAVY_COMBAT_TOOLTIP_NOENGAGED:0 "この船は最後のラウンドでは敵と交戦しなかった。"
@@ -247,7 +247,7 @@
  PAPAL_STATE_NO_INFLUENCE:0 "教皇は教皇への影響力や枢機卿を得ない代わりに教皇の支配者になるためになされた投資を枢機卿の総数に基づいて得ます。"
  EXPENSEDIPLOMATIC:0 "外交費"
  NO_EXPENSESUPPORTREBELS:0 "反乱軍を支援するための経費を持っていません。"
- WAR_OVERVIEW_NOT_FULL_ALLY:0 "§Y$COUNTRY$§!はこの戦争において共戦国ではない。そのため彼らから州を奪う場合、2倍のコストがかかる。"
+ WAR_OVERVIEW_NOT_FULL_ALLY:0 "§Y$COUNTRY$§!はこの戦争において共戦国ではない。そのため彼らから州を奪う場合、2倍の戦勝点コストがかかる。"
  WAR_OVERVIEW_LEADER_NOT_DEMAND:0 "リーダーは平和を要求しないかもしれない"
  WAR_OVERVIEW_LEADER_NOT_DEMAND_DESC:0 "リーダーは、平和の取り決めで私たちのために州を授与することはできません。"
  WAR_OVERVIEW_NO_PEACE:0 "私たちは$COUNTRY$と個別和平の交渉をすることはできません。"
@@ -291,9 +291,9 @@
  INSTI_NOT_ACTIVE:0 "$NAME|Y$はまだ発見されていません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_RELIGION:0 "原始国家は、制度を受容する前に宗教を変更しなければなりません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_GOVERNMENT:0 "原始国家は、制度を受容する前に政府を変更しなければなりません。"
- INSTI_TOO_EXPENSIVE:1 "我々が$NAME|Y$を受容するためには$COST|Y$¤のコストが必要ですが、我々は$CASH|Y$¤しか持っていないので、その余裕はありません。"
+ INSTI_TOO_EXPENSIVE:1 "我々が$NAME|Y$を受容するためには$COST|Y$¤の費用が必要ですが、我々は$CASH|Y$¤しか持っていないので、その余裕はありません。"
  INSTI_NOT_ENOUGH_HOLD:0 "$NAME|Y$の制度は、受容するのに十分なほど我が国に広まっていません。受容するには、自治率による補正後の開発度の$NEED|Y$%以上が必要ですが、受容しているのは$CURR|Y$%だけです。"
- EMBRACE_INSTI_COST:2 "$NAME|Y$を受容するには$COST|Y$¤のコストがかかります。"
+ EMBRACE_INSTI_COST:2 "$NAME|Y$を受容するには$COST|Y$¤の費用がかかります。"
  MANAGE_OVEREXTENSION:0 "過剰拡大を管理する"
  EMPEROR_DIPACTIONS_DESC:0 "\n皇帝は次のような外交的行動をとることができます：\n$LIST|Y$"
  PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は次のような外交的行動をとることができます：\n$LIST|Y$"
@@ -383,7 +383,7 @@
  CANCEL_CORE_PROGRESS:0 "中核州作成を中止します。"
  CANCEL_BUILDING:0 "建設を中止します。"
  CANCEL_UNIT_PRODUCTION:0 "ユニットの生産を中止します。"
- CANCEL_MIL_CON_RULES:0 "建設を§R中止§!します。\n\n進捗状況が§Y$PERC1|%0$§!未満の場合、建設コストの§G$PERC2|%0$§!が払い戻されます。そうでない場合、§R$PERC3|%0$§!のみ得られます。"
+ CANCEL_MIL_CON_RULES:0 "建設を§R中止§!します。\n\n進捗状況が§Y$PERC1|%0$§!未満の場合、建設費用の§G$PERC2|%0$§!が払い戻されます。そうでない場合、§R$PERC3|%0$§!のみ得られます。"
  CANCEL_MIL_CON_REFUND:0 "受け取る："
  CANCEL_MIL_CON_REFUND_CASH:0 "$CASH|+1$¤"
  CANCEL_MIL_CON_REFUND_MAN:0 "$MAN|+0$人的資源。"
