--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -842,7 +842,7 @@
  PEACETREATY_REVOKE_CORE:0 "中核州の取り消し"
  PEACETREATY_RELEASE_VASSAL:0 "従属の取り消し"
  PEACEOFFER_GOLD_DESC:1 "$VAL$¤"
- INTEGRATE_OWNS_MORE_PROVINCES:0 "$BIG$は$SMALL$より多くの州を領有しています。"
+ INTEGRATE_OWNS_MORE_PROVINCES:0 "$BIG$は$SMALL$以上の州を領有しています。"
  PEACEOFFER_DEMANDED_PROVINCE_CANNOT_TAKE_CAPITAL:0 "これは彼らの首都であり、我々は他の州を要求しているので、我々はこれを要求することはできません。"
  DIPLO_CHANGE_VASSALS:0 "他の従属国の評価変動："
  DIPLO_CHANGE_EMPIRE:0 "他の神聖ローマ帝国領邦の評価変動："
