--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1104,8 +1104,8 @@
  tau_conquer_bengal_desc:0 "どのビルマの王国も今までベンガル内まで領域を拡大した事はなかった。我々が最初となるだろう。"
  tau_great_mandala_title:0 "大マンダラ"
  tau_great_mandala_desc:0 "偉大なる皇帝は宇宙の中心であらねばならない。強大なる王は彼の前に頭を垂れ、彼の影をも踏まぬよう崇めなければならない。"
- tau_great_mandala.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y150§!以上あり、かつ独立欲求が§Y50§!以下の従属国が存在する。"
- gen_north_india_powerful_subject.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y50§!以上あり、かつ独立欲求が§Y50§!以下である従属国が存在する。"
+ tau_great_mandala.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y150§!以上あり、かつ独立欲求が§Y50§!未満の従属国が存在する。"
+ gen_north_india_powerful_subject.tooltip:0 "従属国（非朝貢国）の内、総開発度が§Y50§!以上あり、かつ独立欲求が§Y50§!未満である従属国が存在する。"
  tau_dragon_throne_title:0 "竜の玉座の奪取"
  tau_dragon_throne_desc:1 "我が国はこれまで目にした事がない偉大な帝国であろう。強大な中国でさえ、我が支配を承知しているだろう。竜の玉座を奪い、新しい帝国の王朝を宣言せねばならない。"
  guj_walls_of_ahmadabad_mission_title:0 "[Root.Capital.GetCapitalName]の発展"
