--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -23,7 +23,7 @@
  STATE_EDICT_TRIG_NOT:0 "「$NAME|Y$」の布告を持っていない。\n"
  STATE_EDICT_TRIG:0 "「$NAME|Y$」の布告を持っている。\n"
  NUM_CONTINENTS_TRIG:0 "$VAL|Y$以上の大陸に存在している\n"
- NUM_CONTINENTS_TRIG_NOT:0 "我が国の州がある大陸の数が$VAL|Y$未満である\n"
+ NUM_CONTINENTS_TRIG_NOT:0 "$VAL|Y$未満の大陸に州を領有している\n"
  INSTITUTION_DIFF_LOWER_THAN:0 "§Y$WHO$§!が導入した制度の数が§Y$TARGET$§!と比較して§Y$VAL$§!未満である。"
  INSTITUTION_DIFF_AT_LEAST:0 "§Y$WHO$§!が導入した制度の数が§Y$TARGET$§!と比較して§Y$VAL$§!以上である。"
  INSTITUTION_DIFF_LOWER_THAN_ALT:0 "§Y$TARGET$§!の導入した制度の数が§Y$VAL$§!未満である。"
@@ -520,7 +520,7 @@
  ISOLATIONISM_AT_LEAST:0 "孤立主義レベルが$VALUE|Y$以上である。\n"
  ISOLATIONISM_LESS_THAN:0 "孤立主義レベルが$VALUE|Y$未満である。\n"
  INCIDENT_VARIABLE_VALUE:0 "事件「$INCIDENTNAME|Y$」が$VALUE|Y$未満である\n"
- INCIDENT_VARIABLE_VALUE_NOT:0 "事件「$INCIDENTNAME|Y$」が$VALUE|Y$以上である\n"
+ INCIDENT_VARIABLE_VALUE_NOT:0 "事件「$INCIDENTNAME|Y$」が$VALUE|Y$未満である\n"
  IS_INCIDENT_POTENTIAL:0 "事件「$INCIDENTNAME|Y$」は$COUNTRYNAME|Y$にとって将来的に起こり得る。\n"
  IS_INCIDENT_POTENTIAL_NOT:0 "事件「$INCIDENTNAME|Y$」は$COUNTRYNAME|Y$にとって将来的に起こり得ない。\n"
  IS_INCIDENT_ACTIVE:0 "事件「$INCIDENTNAME|Y$」は$COUNTRYNAME|Y$にとって有効である。\n"
